  * Update MIRROR example with a better value (http://deb.debian.org/debian).

  [ Holger Wansing ]
  * Add ka.utf with needed characters for Georgian language, to fix broken
    rendering in text installer. Closes: #1017435

  [ Alper Nebi Yasak ]
  * [amd64, arm64] Build netboot images for ChromeOS devices
    - Make the disk images reproducible
    - Add the images to manifests

 -- Samuel Thibault <sthibault@debian.org>  Sat, 17 Sep 2022 23:35:03 +0200

debian-installer (20220914) unstable; urgency=medium

  [ Samuel Thibault ]
  * Double the number of available inodes on the hurd initrd.
  * Start speech synthesis after 30s timeout.

  [ Youngtaek Yoon ]
  * Support multiple udeb components.

  [ Vagrant Cascadian ]
  * [armhf] Add support for Bananapi_M2_Ultra (Closes: #982913).
  * [armhf] Update MX53LOCO filename with newer u-boot.

  [ John Paul Adrian Glaubitz ]
  * ia64: Remove ide-core-modules and ide-modules from pkg-lists
  * m68k: Remove ide-core-modules and ide-modules from pkg-lists
  * powerpc: Add sata-modules to cdrom pkg-lists
  * ppc64: Add sata-modules to cdrom pkg-lists

  [ Cyril Brulebois ]
  * Bump Linux kernel ABI to 5.19.0-1.
  * Install bookworm, using bookworm udebs.
  * Work around FTBFS on armel and mipsel, where libcrypto3-udeb depends
    on libatomic1: use libatomic1.so* from the host system (as that's done
    for libgcc_s.so*), instead of introducing libatomic1-udeb.
  * Update translation-status for the release.

  [ Sophie Brun ]
  * Harmonize UEFI (grub) and BIOS (syslinux) boot menus:
    - use same label for "dark theme menu"
    - use same inclusion rules for the "Install with speech synthesis" menu
  * Do not hardcode the name of the distribution in syslinux's menu.cfg

  [ Frédéric Bonnard ]
  * Minimal support for cross-building.

  [ Roland Clobus ]
  * build/Makefile:
     - use install -p to preserve timestamps.
  * build/daily-build:
     - use rsync -t to preserve timestamps.