@@ -5,7 +5,7 @@ NETBOOT_DIR_LINKS = pxelinux.0 pxelinux.cfg
 
 TYPE = netboot/gtk
 
-TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO)
+TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO) $(DEPTHCHARGE)
 EXTRANAME = netboot/gtk/
 
 BOOT_SCREEN_DIR = $(NETBOOT_PATH)/boot-screens/
@@ -24,6 +24,3 @@ VIDEO_MODE=$(VIDEO_MODE_GTK)
 # All images that include cdebconf should include symbols needed by these
 # plugins.
 EXTRAUDEBS += cdebconf-gtk-entropy
-
-# Build images for ChromeOS devices
-DEPTHCHARGE = y
