@@ -2,7 +2,7 @@ MEDIA_TYPE = netboot image
 
 NETBOOT_DIR_TARGETS = $(TEMP_INITRD) $(TEMP_KERNEL)
 NETBOOT_DIR_LINKS = pxelinux.0 pxelinux.cfg
-TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO)
+TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO) $(DEPTHCHARGE)
 EXTRANAME = $(MEDIUM)/
 
 BOOT_SCREEN_DIR = $(NETBOOT_PATH)/boot-screens/
@@ -11,6 +11,3 @@ MANIFEST-NETBOOT_DIR = "PXE boot directory for tftp server"
 MANIFEST-NETBOOT_TAR = "tarball of PXE boot directory"
 MANIFEST-MINIISO = "tiny CD image that boots the netboot installer"
 MANIFEST-DEPTHCHARGE = "Disk/partition images for ChromeOS devices (netboot installer)"
-
-# Build images for ChromeOS devices
-DEPTHCHARGE = y
