@@ -4,7 +4,7 @@ NETBOOT_DIR_TARGETS = $(TEMP_INITRD) $(TEMP_KERNEL)
 
 TYPE = netboot/gtk
 
-TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO) netboot_images_concatenateable
+TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO) $(DEPTHCHARGE) netboot_images_concatenateable
 EXTRANAME = netboot/gtk/
 
 BOOT_SCREEN_DIR = $(NETBOOT_PATH)/boot-screens/
@@ -23,9 +23,6 @@ VIDEO_MODE=$(VIDEO_MODE_GTK)
 # All images that include cdebconf should include symbols needed by these
 # plugins.
 EXTRAUDEBS += cdebconf-gtk-entropy
-
-# Build images for ChromeOS devices
-DEPTHCHARGE = y
 
 IMAGE_SIZE = 200000
 
