@@ -1,16 +1,13 @@
 MEDIA_TYPE = netboot image
 
 NETBOOT_DIR_TARGETS = $(TEMP_INITRD) $(TEMP_KERNEL)
-TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO) netboot_images_concatenateable
+TARGET = $(NETBOOT_DIR) $(NETBOOT_TAR) $(MINIISO) $(DEPTHCHARGE) netboot_images_concatenateable
 EXTRANAME = $(MEDIUM)/
 
 MANIFEST-NETBOOT_DIR = "PXE boot directory for tftp server"
 MANIFEST-NETBOOT_TAR = "tarball of PXE boot directory"
 MANIFEST-MINIISO = "tiny CD image that boots the netboot installer"
 MANIFEST-DEPTHCHARGE = "Disk/partition images for ChromeOS devices (netboot installer)"
-
-# Build images for ChromeOS devices
-DEPTHCHARGE = y
 
 IMAGE_SIZE = 150000
 
