@@ -71,6 +71,7 @@ DEBIAN_CD_INFO = $(SOME_DEST)/$(EXTRANAME)debian-cd_info.tar.gz
 NETBOOT_DIR = $(SOME_DEST)/$(EXTRANAME)$(NETBOOT_DI_DIR)
 NETBOOT_TAR = $(SOME_DEST)/$(EXTRANAME)netboot.tar.gz
 RAMDISK = $(SOME_DEST)/$(EXTRANAME)ramdisk.gz
+DEPTHCHARGE = $(SOME_DEST)/$(EXTRANAME)depthcharge
 MISC = $(foreach name,$(MISCNAME),$(SOME_DEST)/$(EXTRANAME)$(name))
 
 # some intersting files in tmp/ we may need
@@ -89,6 +90,7 @@ TEMP_CD_INFO_DIR = $(TEMP)/cd_info
 TEMP_CD_TREE = $(TEMP)/cd_tree
 TEMP_POWERPC_INITRD = $(TEMP)/powerpc_initrd_tree
 TEMP_GRUB_EFI = $(TEMP)/grub_efi
+TEMP_DEPTHCHARGE = $(TEMP)/depthcharge
 
 DPKGDIR = $(TREE)/var/lib/dpkg
 
