@@ -437,33 +437,34 @@ arch_netboot_dir: x86_syslinux x86_grub_efi
 		> $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/grub/grub.cfg; \
 	fi
 
-	if [ "$(DEPTHCHARGE)" = y ]; then \
-		set -e; \
-		mkdir -p $(TEMP_NETBOOT_DIR)/depthcharge; \
-		depthchargectl build -v \
-			--board amd64-generic \
-			--kernel-release $(KERNELVERSION) \
-			--kernel $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/linux \
-			--initramfs $(TEMP_NETBOOT_DIR)/$(NETBOOT_PATH)/initrd.gz \
-			--root none \
-			--kernel-cmdline "--- quiet" \
-			--output $(TEMP_NETBOOT_DIR)/depthcharge/kernel.img; \
-		dd 2>/dev/null \
-			if=/dev/zero \
-			of=$(TEMP_NETBOOT_DIR)/depthcharge/disk.img \
-			bs=1k seek=514k count=1; \
-		printf "%s\n" \
-			"label: gpt" \
-			"label-id: FAA8418B-0E21-7B4A-832F-610E4BDB0011" \
-			"start=1M, size=512M, type=FE3A2A5D-4F32-41A7-B725-ACCC3285A309, uuid=1A1BBC68-C801-1A48-AE23-5231DEC1BBF1" \
-			| sfdisk $(TEMP_NETBOOT_DIR)/depthcharge/disk.img; \
-		depthchargectl write -v \
-			--target $(TEMP_NETBOOT_DIR)/depthcharge/disk.img \
-			$(TEMP_NETBOOT_DIR)/depthcharge/kernel.img; \
-		depthchargectl bless -v -i 1 $(TEMP_NETBOOT_DIR)/depthcharge/disk.img; \
-		gzip -9nf $(TEMP_NETBOOT_DIR)/depthcharge/kernel.img; \
-		gzip -9nf $(TEMP_NETBOOT_DIR)/depthcharge/disk.img; \
-	fi
+# ChromeOS devices
+.PHONY: arch_depthcharge
+arch_depthcharge:
+	-rm -f $(TEMP_DEPTHCHARGE)/*
+	mkdir -p $(TEMP_DEPTHCHARGE)
+	depthchargectl build -v \
+		--board amd64-generic \
+		--kernel-release $(KERNELVERSION) \
+		--kernel $(TEMP_KERNEL) \
+		--initramfs $(TEMP_INITRD) \
+		--root none \
+		--kernel-cmdline "--- quiet" \
+		--output $(TEMP_DEPTHCHARGE)/kernel.img
+	dd 2>/dev/null \
+		if=/dev/zero \
+		of=$(TEMP_DEPTHCHARGE)/disk.img \
+		bs=1k seek=514k count=1
+	printf "%s\n" \
+		"label: gpt" \
+		"label-id: FAA8418B-0E21-7B4A-832F-610E4BDB0011" \
+		"start=1M, size=512M, type=FE3A2A5D-4F32-41A7-B725-ACCC3285A309, uuid=1A1BBC68-C801-1A48-AE23-5231DEC1BBF1" \
+		| sfdisk $(TEMP_DEPTHCHARGE)/disk.img
+	depthchargectl write -v \
+		--target $(TEMP_DEPTHCHARGE)/disk.img \
+		$(TEMP_DEPTHCHARGE)/kernel.img
+	depthchargectl bless -v -i 1 $(TEMP_DEPTHCHARGE)/disk.img
+	gzip -9nf $(TEMP_DEPTHCHARGE)/kernel.img
+	gzip -9nf $(TEMP_DEPTHCHARGE)/disk.img
 
 .PHONY: xen_config
 xen_config:
